force-app/main/default/objects/Payment_order_line__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_price__c</fullName>
        <label>Effective price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payments</label>
        <referenceTo>Payments__c</referenceTo>
        <relationshipLabel>Payment order lines</relationshipLabel>
        <relationshipName>Payment_order_lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_handle__c</fullName>
        <label>Plan handle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntryId__c</fullName>
        <label>PricebookEntryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Payment order lines</relationshipLabel>
        <relationshipName>Payment_order_lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provision_base__c</fullName>
        <label>Provision base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vat__c</fullName>
        <label>Vat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Payment order line</label>
    <nameField>
        <label>Payment order lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment order lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>